﻿
15/12/2015:
* 


14/12/2015:
* REFACT: many minor changes are reworks, also involving named type variables


10/12/2015:
* REFACT: support for named type variables: var type reworked and scoping rules of named type variables implemented


23/12/2015:
* REFACT: closed-world overloading introduced: no need for the 'overload' declaration; 'let over' at will; locally resolved via a special tag for constraints


18/11/2015:
* first GitHub publish
* started writing of documentation on README.md


9/11/2015: [v0.8.0]
* all code migrated to F# 4.0 and .NET 4.6


4/11/2015:
* FIX: usage of substitution composition was sometimes wrong: arguments were inverted in some cases, now should be fixed
* UP: substitution composition implementation was quite optimized but might have led to unexpected results: now it's been implemented using second
      operand domain restriction, as in "https://en.wikipedia.org/wiki/Substitution_(logic)"


3/11/2015:
* FIX: eval cancellation and ctrl-c handling has finally been fixed
* REFACT: V_Redux values now take an Eval.context as extra argument in the closure part of the pair: this makes cancellation possible by passing the
          context at the time when the beta redux occurs
* NEW: dynamic configuration sub-system for run-time flags: basically it consists of a singleton class with getter/setter properties
* UP: support for Unicode symbols and greek letters for type variables based on actual .NET console capabilities
* NEW: Unicode and greek support can be enabled/disabled via command line arguments
* REFACT: FreeCons and P_FreeCons have been renamed to PolyCons and P_PolyCons respectively. This makes more sense and is more consistent.
* REFACT: ticked identifiers, upper as well as lower cased, have been subject to redesign due to inconsistencies. Now this is the current scenario:
                  X | x     = Var      =>  typing must discriminate between variable names and data constructor names